--- a/src/main/external-resources/index.html
+++ b/src/main/external-resources/index.html
@@ -46,7 +46,7 @@
             <div class="mdc-card">
                 <section class="mdc-card__primary">
                     <h1 class="mdc-card__title mdc-card__title--large">Descrição do Código</h1>
-                    <a href="/code.html" class="mdc-button mdc-button--unelevated mdc-ripple-upgraded" data-mdc-auto-init="MDCRipple">
+                    <a href="assets/code.html" class="mdc-button mdc-button--unelevated mdc-ripple-upgraded" data-mdc-auto-init="MDCRipple">
                         <i class="material-icons mdc-button__icon">code</i>
                         Código
                     </a>
